--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,31 +7,19 @@
     android:layout_height="match_parent"
     tools:context="com.example.geomslayer.hseproject.MainActivity">
 
-    <Button
-        android:id="@+id/btn_to_entry"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ListView
+        android:id="@+id/list_news"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:onClick="readNewsCallback"
-        android:text="@string/read_news"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btn_to_stats"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/open_stats"
-        app:layout_constraintLeft_toLeftOf="@+id/btn_to_entry"
-        app:layout_constraintRight_toRightOf="@+id/btn_to_entry"
-        app:layout_constraintTop_toBottomOf="@+id/btn_to_entry" />
 
 </android.support.constraint.ConstraintLayout>
