Added menu and  toolbar with snipper of topics

--- a/app/src/main/res/layout/activity_read.xml
+++ b/app/src/main/res/layout/activity_read.xml
@@ -1,86 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_read"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.example.geomslayer.hseproject.ReadActivity">
 
-
-    <android.support.constraint.ConstraintLayout
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/base_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
-        <TextView
-            android:id="@+id/txt_topic"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:text="Topic"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/txt_date"
-            app:layout_constraintTop_toTopOf="parent" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/txt_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            android:text="Date"
-            app:layout_constraintBaseline_toBaselineOf="@+id/txt_topic"
-            app:layout_constraintRight_toRightOf="parent" />
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/txt_title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:textStyle="bold"
-            android:text="Title"
-            app:layout_constraintLeft_toLeftOf="@+id/txt_topic"
-            app:layout_constraintRight_toRightOf="@+id/txt_date"
-            app:layout_constraintTop_toBottomOf="@+id/txt_topic" />
+            <TextView
+                android:id="@+id/txt_topic"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:text="Topic"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@+id/txt_date"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/txt_content"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="Content"
-            app:layout_constraintLeft_toLeftOf="@+id/txt_title"
-            app:layout_constraintRight_toRightOf="@+id/txt_title"
-            app:layout_constraintTop_toBottomOf="@+id/txt_title" />
+            <TextView
+                android:id="@+id/txt_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:text="Date"
+                app:layout_constraintBaseline_toBaselineOf="@+id/txt_topic"
+                app:layout_constraintRight_toRightOf="parent" />
 
-        <TextView
-            android:id="@+id/txt_question"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Question"
-            app:layout_constraintLeft_toLeftOf="@+id/txt_content"
-            app:layout_constraintRight_toRightOf="@+id/txt_content"
-            app:layout_constraintTop_toBottomOf="@+id/txt_content" />
+            <TextView
+                android:id="@+id/txt_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Title"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="@+id/txt_topic"
+                app:layout_constraintRight_toRightOf="@+id/txt_date"
+                app:layout_constraintTop_toBottomOf="@+id/txt_topic" />
 
-        <LinearLayout
-            android:id="@+id/option_list"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginTop="8dp"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="@+id/txt_question"
-            app:layout_constraintRight_toRightOf="@+id/txt_question"
-            app:layout_constraintTop_toBottomOf="@+id/txt_question">
+            <TextView
+                android:id="@+id/txt_content"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Content"
+                app:layout_constraintLeft_toLeftOf="@+id/txt_title"
+                app:layout_constraintRight_toRightOf="@+id/txt_title"
+                app:layout_constraintTop_toBottomOf="@+id/txt_title" />
 
-        </LinearLayout>
+            <TextView
+                android:id="@+id/txt_question"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Question"
+                app:layout_constraintLeft_toLeftOf="@+id/txt_content"
+                app:layout_constraintRight_toRightOf="@+id/txt_content"
+                app:layout_constraintTop_toBottomOf="@+id/txt_content" />
 
-    </android.support.constraint.ConstraintLayout>
+            <LinearLayout
+                android:id="@+id/option_list"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:layout_marginTop="8dp"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="@+id/txt_question"
+                app:layout_constraintRight_toRightOf="@+id/txt_question"
+                app:layout_constraintTop_toBottomOf="@+id/txt_question">
 
-</ScrollView>
+            </LinearLayout>
+
+        </android.support.constraint.ConstraintLayout>
+
+    </ScrollView>
+
+</LinearLayout>
