--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,15 @@
         android:background="?attr/colorPrimary"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+        <Spinner
+            android:id="@+id/toolbar_spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:showAsAction="always" />
+
+    </android.support.v7.widget.Toolbar>
 
     <ListView
         android:id="@+id/list_news"
