--- a/app/src/main/res/menu/base_menu.xml
+++ b/app/src/main/res/menu/base_menu.xml
@@ -2,7 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-    <item android:id="@+id/new_game"
-        android:title="@string/settings"/>
+    <item
+        android:id="@+id/settings"
+        android:title="@string/settings" />
+
+    <item
+        android:id="@+id/statistics"
+        android:title="@string/statistics" />
 
 </menu>
