--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.geomslayer.hseproject.MainActivity">
+    tools:context="com.example.geomslayer.hseproject.mainscreen.MainActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/base_toolbar"
