--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -20,7 +20,7 @@
 
     <fragment
         android:id="@+id/settings_fragment"
-        android:name="com.example.geomslayer.hseproject.SettingsFragment"
+        android:name="com.example.geomslayer.hseproject.settings.SettingsFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
