--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,41 +8,32 @@
     tools:context="com.example.geomslayer.hseproject.mainscreen.MainActivity">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/base_toolbar"
-        android:layout_width="match_parent"
+        android:id="@+id/tb_main"
+        android:layout_width="0dp"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <Spinner
-            android:id="@+id/toolbar_spinner"
+            android:id="@+id/sp_topics"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:showAsAction="always" />
 
     </android.support.v7.widget.Toolbar>
 
-    <ListView
-        android:id="@+id/list_news"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_news"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_topic" />
-
-    <Spinner
-        android:id="@+id/spinner_topic"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/tb_main" />
 
 </android.support.constraint.ConstraintLayout>
