--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -8,7 +8,7 @@
     tools:context="com.example.geomslayer.hseproject.stats.StatsActivity">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/base_toolbar"
+        android:id="@+id/tb_main"
         android:layout_width="0dp"
         android:layout_height="56dp"
         android:background="?attr/colorPrimary"
@@ -28,6 +28,6 @@
         android:layout_marginTop="8dp"
         android:text="TextView"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/base_toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/tb_main" />
 
 </android.support.constraint.ConstraintLayout>
