--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <TextView
-        android:id="@+id/txt_item_title"
+        android:id="@+id/txt_itemTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView"
         android:textSize="16sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        tools:text="TextView" />
 
     <TextView
-        android:id="@+id/txt_item_content"
+        android:id="@+id/txt_itemText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:maxLines="5"
         android:ellipsize="end"
-        android:text="TextView" />
+        android:maxLines="5"
+        tools:text="TextView" />
 
 </LinearLayout>
