--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -1,25 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/txt_itemTitle"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:textSize="16sp"
         android:textStyle="bold"
-        tools:text="TextView" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/img_new"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="TextView\nsdfgsdfgs\nsdfgsdfg"/>
 
     <TextView
         android:id="@+id/txt_itemText"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
         android:ellipsize="end"
         android:maxLines="5"
-        tools:text="TextView" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="@+id/txt_itemTitle"
+        app:layout_constraintTop_toBottomOf="@+id/txt_itemTitle"
+        tools:text="TextView\nsdfg\nsfdgsdf\nsfgsdfg\nsdfgsdfg\nsdfgsdfg\nsdfgsdg\nsdfgsdfg\nsdfgdsfg"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp"/>
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/img_new"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
+        android:contentDescription=""
+        app:srcCompat="@drawable/ic_new"
+        app:layout_constraintTop_toTopOf="@+id/txt_itemTitle"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp"
+        tools:ignore="ContentDescription"/>
+
+</android.support.constraint.ConstraintLayout>
