--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -1,53 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="8dp">
 
-    <TextView
-        android:id="@+id/txt_itemTitle"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/img_new"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="TextView\nsdfgsdfgs\nsdfgsdfg"/>
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_marginBottom="8dp"
+            android:id="@+id/txt_itemTitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            tools:text="TextView\nsdfgsdfgs\nsdfgsdfg"/>
+
+        <ImageView
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:id="@+id/img_new"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            app:srcCompat="@drawable/ic_new"/>
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/txt_itemText"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
         android:ellipsize="end"
         android:maxLines="5"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="@+id/txt_itemTitle"
-        app:layout_constraintTop_toBottomOf="@+id/txt_itemTitle"
-        tools:text="TextView\nsdfg\nsfdgsdf\nsfgsdfg\nsdfgsdfg\nsdfgsdfg\nsdfgsdg\nsdfgsdfg\nsdfgdsfg"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="16dp"/>
+        tools:text="TextView\nsdfg\nsfdgsdf\nsfgsdfg\nsdfgsdfg\nsdfgsdfg\nsdfgsdg\nsdfgsdfg\nsdfgdsfg"/>
 
-    <ImageView
-        android:id="@+id/img_new"
-        android:layout_width="18dp"
-        android:layout_height="18dp"
-        android:contentDescription=""
-        app:srcCompat="@drawable/ic_new"
-        app:layout_constraintTop_toTopOf="@+id/txt_itemTitle"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="16dp"
-        tools:ignore="ContentDescription"/>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
