--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
@@ -23,7 +24,7 @@
             android:id="@+id/sp_topics"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:showAsAction="always" />
+            app:showAsAction="always"/>
 
     </android.support.v7.widget.Toolbar>
 
@@ -34,6 +35,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tb_main" />
+        app:layout_constraintTop_toBottomOf="@+id/tb_main"/>
 
 </android.support.constraint.ConstraintLayout>
