--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -6,7 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="8dp">
+    android:paddingBottom="6dp"
+    android:paddingEnd="8dp"
+    android:paddingStart="8dp"
+    android:paddingTop="6dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,21 +17,22 @@
         android:orientation="horizontal">
 
         <TextView
-            android:layout_marginBottom="8dp"
             android:id="@+id/txt_itemTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:layout_weight="1"
+            android:textColor="@android:color/primary_text_light"
             android:textSize="16sp"
             android:textStyle="bold"
-            tools:text="TextView\nsdfgsdfgs\nsdfgsdfg"/>
+            tools:text="Title of news"/>
 
         <ImageView
+            android:id="@+id/img_new"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
-            android:id="@+id/img_new"
-            android:layout_width="18dp"
-            android:layout_height="18dp"
             app:srcCompat="@drawable/ic_new"/>
 
     </LinearLayout>
@@ -39,7 +43,8 @@
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:maxLines="5"
-        tools:text="TextView\nsdfg\nsfdgsdf\nsfgsdfg\nsdfgsdfg\nsdfgsdfg\nsdfgsdg\nsdfgsdfg\nsdfgdsfg"/>
+        android:textColor="@android:color/secondary_text_light"
+        tools:text="Some information about news."/>
 
 
 </LinearLayout>
